# preference-dynamics-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 00_test_plotly_render.ipynb  10_data_generation.ipynb  20_data_exploration.ipynb  30_feature_engineering.ipynb  40_training_cnn_n1.ipynb  41_training_cnn_n1_residual.ipynb  60_sagemaker.ipynb
src/: requirements.txt
src/preference_dynamics/: __init__.py  schemas.py  utils.py
src/preference_dynamics/data/: __init__.py  adapters.py  dataset.py  io_handler.py  manager.py  schemas.py  transformer.py
src/preference_dynamics/experiments/: __init__.py  experiment.py  runner.py
src/preference_dynamics/models/: __init__.py  base.py  cnn1d.py  cnn1d_feat.py  cnn1d_residual.py  inverse_pinn.py  schemas.py  utils.py
src/preference_dynamics/sagemaker/: __init__.py  inference_cnn1d_residual.py  train_cnn1d_residual.py
src/preference_dynamics/solver/: __init__.py  batch.py  equations.py  integrator.py  sampler.py  stability.py  torch_equations.py
src/preference_dynamics/training/: __init__.py  collocation.py  inverse_pinn_eval.py  logging.py  loss.py  metrics.py  trainer.py
src/preference_dynamics/visualization/: __init__.py  metrics.py  parameters.py  timeseries.py
tests/: conftest.py
tests/data/processed/: test.json  train.json  val.json
tests/integration/: conftest.py  test_data_generation.py  test_sagemaker_pipeline.py  test_training_pipeline.py
tests/model/: model.pt  model_config.json
tests/unit/: test_adapters.py  test_cnn1d.py  test_data_manager.py  test_experiment_runner.py  test_integrator.py  test_io_handler.py  test_sagemaker.py  test_sampler.py  test_schemas.py  test_stability.py  test_trainer.py  test_transformer.py  test_utils.py
