[project]
name = "preference-dynamics-learning"
version = "0.1.0"
description = "ML research project for solving inverse problem of learning parameters of nonlinear preference dynamics ODE systems from time series data"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [
    { name = "Markus Krecik", email = "markus.krecik@proton.me" }
]
keywords = ["machine-learning", "ode", "parameter-learning", "inverse-problem", "time-series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core numerical computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # "diffeqpy>=2.5.4", # julia ODE solver
    # Deep learning
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # "torchvision>=0.15.0",
    # Machine learning utilities
    "scikit-learn>=1.3.0",
    # Experiment tracking and MLOps
    "mlflow>=2.8.0",
    # Data handling and validation
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "numpydantic>=1.7.0",
    "pyarrow>=13.0.0",
    # Visualization
    "plotly>=5.17.0",
    # "seaborn>=0.12.0",
    # "plotnine>=0.15.1",
    # Jupyter notebooks
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "nbstripout>=0.8.1",
    # Progress bars
    "tqdm>=4.66.0",
    # Parallel processing
    "joblib>=1.3.0",
    # Hyperparameter optimization
    "optuna>=3.4.0",
    # Time series feature extraction
    "tsfresh>=0.20.0",
    # Model interpretability
    "captum>=0.6.0",
    # Configuration management
    # "pyyaml>=6.0",
    # Package management
    "pip>=25.3", # Only to have mlflow stop complaining
    # Other
    "rich>=14.2.0",
    "sagemaker>=2.255.0",
    "awscli>=1.44.14",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    # "pytest-xdist>=3.3.0",
    # "pytest-watch>=4.2.0",
    # Code quality
    "ruff>=0.1.6",
    "mypy>=1.18.2",
    "pre-commit>=3.5.0",
    # Type stubs
    "pandas-stubs>=2.0.0",
    # "types-pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/markuskrecik/preference-dynamics-learning"
Repository = "https://github.com/markuskrecik/preference-dynamics-learning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preference_dynamics"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value
    "N802",  # lowercase function names
    "N803",  # lowercase argument names
    "N806",  # lowercase var names
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]  # Allow magic values and asserts in tests
"*.ipynb" = ["ALL"]  # Allow all rules in notebooks

[tool.ruff.lint.isort]
known-first-party = ["preference_dynamics"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true

# Relax strictness for specific packages
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "tsfresh.*",
    "captum.*",
    "mlflow.*",
    "seaborn.*",
    "plotly.*",
    "joblib.*",
    "optuna.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "contract: contract tests",
    "unit: unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/preference_dynamics"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
